--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task One</title>
-    <script src="webFunctions.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="coloring.css">
+    <script src="./webFunctions.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="./coloring.css">
 </head>
 <body>
     <h1>Task One</h1>
